# LNbits-MCP-Server

./: .env  QUICK_START.md  README.md  REMOTE-MCP-SERVER.md  claude_desktop_config.json  mcp_config_example.json  openapi.json  openapi.yaml  pyproject.toml  requirements.txt  test_claude_connection.py  test_lightning_address.py  test_simple_mcp.py
.github/workflows/: ci.yml
src/lnbits_mcp_server/: __init__.py  __main__.py  client.py  fastmcp_server.py  http_server.py  secure_fastmcp_server.py  server.py  session_manager.py
src/lnbits_mcp_server/discovery/: __init__.py  curated_descriptions.py  dispatcher.py  meta_tools.py  openapi_parser.py  tool_registry.py
src/lnbits_mcp_server/models/: __init__.py  schemas.py
src/lnbits_mcp_server/tools/: __init__.py  admin.py  config_tools.py  core.py  extensions.py  invoices.py  payments.py
src/lnbits_mcp_server/utils/: __init__.py  auth.py  runtime_config.py
tests/: conftest.py  test_auth.py  test_client.py  test_dispatcher.py  test_meta_tools.py  test_openapi_parser.py  test_runtime_config.py  test_server_integration.py  test_tool_registry.py
tests/fixtures/: openapi_spec.json  openapi_spec_live.json
